--- a/flex/05-flex-modal/index.html
+++ b/flex/05-flex-modal/index.html
@@ -12,14 +12,18 @@
 
       <div class="icon">!</div>
 
-      <div class="header"><strong>Are you sure you want to do that?</strong></div>
+      <div class="info">
+       <div class="head">
+        <div class="header"><strong>Are you sure you want to do that?</strong></div>
+        <div class="close-button">✖</div>
+       </div>
 
-      <div class="close-button">✖</div>
-
-      <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
-
-      <button class="continue">Continue</button>
-      <button class="cancel">Cancel</button>
+       <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
+       <div class="buttons">
+        <div><button class="continue">Continue</button></div>
+        <div><button class="cancel">Cancel</button></div>
+       </div>
+      </div>
 
     </div>
   </body>
