--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -9,17 +9,23 @@
   </head>
   <body>
     <div class="header">
-      <ul class="left-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Store</a></li>
-      </ul>
-      <ul class="right-links">
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Settings</a></li>
-      </ul>
+
+      <div class="link-left">
+         <div><a href="#">About</a></div>
+         <div><a href="#">Store</a></div>
+      </div>
+
+      <div class="link-left">
+       
+         <div><a href="#">Profile</a></div>
+         <div><a href="#">Settings</a></div>
+       
+      </div>
+
     </div>
+
     <div class="content">
-      <img src="./logo.png" alt="">
+      <div><img src="./logo.png" alt=""></div>
       <div class="input">
         <input type="text">
       </div>
@@ -28,15 +34,17 @@
         <button>Do the other thing!</button>
       </div>
     </div>
+
     <div class="footer">
-      <ul class="left-links">
-        <li><a href="#">Advertising</a></li>
-        <li><a href="#">Business</a></li>
-      </ul>
-      <ul class="right-links">
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-      </ul>
+      <div class="links-left">
+        <div><a href="#">Advertising</a></div>
+        <div><a href="#">Business</a></div>
+      </div>
+      <div class="links-left">
+        <div><a href="#">Privacy</a></div>
+        <div><a href="#">Terms</a></div>
+      </div>
     </div>
+
   </body>
 </html>
